--- a/styles/p1_style.css
+++ b/styles/p1_style.css
@@ -8,6 +8,9 @@ gird-column-start
     padding: 0;
     margin: 0;
 }
+body{
+    background-color:  lightblue;
+}
 #header {
     display: grid;
     grid-template-columns: 25% 25% 25% 25%;
