--- a/styles/p1_style.css
+++ b/styles/p1_style.css
@@ -25,13 +25,13 @@ gird-column-start
 
 #container {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: auto 80% auto;
     background-color:rosybrown;
 }
 
 #middle-column {
     padding-top: 10px;
-    grid-column-start: 1;
+    grid-column-start: 2;
     background-color: lightblue;
     height: 1000px;
 }
