--- a/styles/p2_style.css
+++ b/styles/p2_style.css
@@ -29,15 +29,15 @@ body {
     padding-top: 5px;
     background-color: lightblue;
     height: 100px;
-    gap: 3px; /*Play with this value*/
+    gap: 3px;
     display: grid;
     grid-template-columns: auto auto auto;
     background-color:lightblue;
 }
 
 #container {
-
-
+    padding: 5px;
+    gap: 0px; /*Play with this value*/
 }
 
 .item {
